syntax = "proto3";

package m3o_alert;

service Alert {
	rpc ReportEvent(ReportEventRequest) returns (ReportEventResponse) {}
}

message Event {
	string id = 1;
	string category = 2;
	string action = 3;
	string label = 4;
	uint64 value = 5;
	map<string,string> metadata = 6;
	string userID = 7;
}

message ReportEventRequest {
	Event event = 1;
}

message ReportEventResponse {}
