syntax = "proto3";

package go.micro.service.invite;

service Invite {
	// Invite a user
	rpc User(CreateRequest) returns (CreateResponse) {};
	// Delete an invite 
	rpc Delete(CreateRequest) returns (CreateResponse) {};
	// Validate an email
	rpc Validate(ValidateRequest) returns (ValidateResponse) {};
}

message CreateRequest {
  string email = 1;
  string namespace = 2;
}

message CreateResponse {
}

message DeleteRequest {
  string email = 1;
}

message DeleteResponse {
}

message ValidateRequest {
  string email = 1;
}

message ValidateResponse {
	repeated string namespaces = 1;
}
